--- a/src/main/resources/templates/act/model/model.html
+++ b/src/main/resources/templates/act/model/model.html
@@ -4,7 +4,7 @@
 <meta charset="utf-8">
 <head th:include="include :: header"></head>
 <body class="gray-bg">
-	<div class="wrapper wrapper-content ">
+	<div class="wrapper wrapper-content "><!--数据字典-->
 		<div class="row">
 			<div class="col-sm-11">
 				<div class="ibox">
@@ -21,13 +21,13 @@
 								</button>
 							</div>
 							<div class="columns pull-right">
-								<button class="btn btn-success" onclick="reLoad()">查询</button>
+								<button class="btn btn-success" onclick="reLoad()">哈哈</button>
 							</div>
 
 							<div class="columns pull-right col-md-2 nopadding">
 								<input id="searchName" type="text" class="form-control"
 									placeholder="">
-							</div>
+							</div><!--查询输入窗口-->
 						</div>
 						<table id="exampleTable" data-mobile-responsive="true">
 						</table>
