--- a/src/main/resources/templates/common/dict/dict.html
+++ b/src/main/resources/templates/common/dict/dict.html
@@ -9,11 +9,11 @@
 				<div class="ibox-body">
 					<div class="fixed-table-toolbar">
 						<div class="columns pull-left">
-							<button shiro:hasPermission="common:dict:add" type="button"
+							<button shiro :hasPermission="common:dict:add" type="button"
 								class="btn  btn-primary" onclick="add()">
 								<i class="fa fa-plus" aria-hidden="true"></i>添加
 							</button>
-							<button shiro:hasPermission="common:dict:batchRemove"
+							<button shiro :hasPermission="common:dict:batchRemove"
 								type="button" class="btn  btn-danger" onclick="batchRemove()">
 								<i class="fa fa-trash" aria-hidden="true"></i>删除
 							</button>
@@ -28,8 +28,7 @@
 							</select>
 						</div>
 					</div>
-					<table id="exampleTable" data-mobile-responsive="true">
-					</table>
+					<table id="exampleTable" data-mobile-responsive="true"></table>
 				</div>
 			</div>
 		</div>
@@ -42,25 +41,26 @@
 			var s_resetPwd_h = 'hidden';
 		</script>
 	</div>
-	<div shiro:hasPermission="common:dict:edit">
+	<div shiro :hasPermission="common:dict:edit">
 		<script type="text/javascript">
 			s_edit_h = '';
 		</script>
 	</div>
-	<div shiro:hasPermission="common:dict:remove">
+	<div shiro :hasPermission="common:dict:remove">
 		<script type="text/javascript">
 			var s_remove_h = '';
 		</script>
 	</div>
-	<div shiro:hasPermission="common:dict:add">
+	<div shiro :hasPermission="common:dict:add">
 		<script type="text/javascript">
 			var s_add_h = '';
 		</script>
 	</div>
-
-	</div>
+	<!--</div>-->
 	<div th:include="include :: footer"></div>
 	<script type="text/javascript"
-		src="/js/appjs/common/dict/dict.js"></script>
+		src="/js/appjs/common/dict/dict.js">
+
+	</script>
 </body>
 </html>
