--- a/src/main/resources/templates/act/modeler.html
+++ b/src/main/resources/templates/act/modeler.html
@@ -31,8 +31,9 @@
 	<div class="navbar navbar-fixed-top navbar-inverse" role="navigation" id="main-header">
 	    <div class="navbar-header">
             <a href="" ng-click="backToLanding()" class="navbar-brand"
-               title="{{'GENERAL.MAIN-TITLE' | translate}}"><span
-                    class="sr-only">{{'GENERAL.MAIN-TITLE' | translate}}</span></a>
+               title="{{'GENERAL.MAIN-TITLE' | translate}}">
+				<span class="sr-only">{{'GENERAL.MAIN-TITLE' | translate}}</span>
+			</a>
         </div>
 	</div>
 	
