--- a/src/main/resources/templates/common/file/file.html
+++ b/src/main/resources/templates/common/file/file.html
@@ -1,220 +1,101 @@
 <!DOCTYPE html>
 <html>
-<head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>bootdo - 文件管理器</title>
-    <meta name="keywords" content="">
-    <meta name="description" content="">
-    <link rel="shortcut icon" href="favicon.ico">
-    <link href="/css/bootstrap.min.css?v=3.3.6" rel="stylesheet">
-    <link href="/css/font-awesome.css?v=4.4.0" rel="stylesheet">
-    <link href="/css/animate.css" rel="stylesheet">
-    <link href="/css/layui.css" rel="stylesheet">
-    <link href="/css/style.css?v=4.1.0" rel="stylesheet">
-    <style>
-        .aactive {
-            color: #13b5b7 !important;
-        }
-        .hactive:hover{
-            color: #13b5b7 !important;
-        }
-    </style>
-</head>
+<meta charset="utf-8">
+<head th:include="include :: header"></head>
 <body class="gray-bg">
-<div class="wrapper wrapper-content" id="app">
-    <div class="row">
-        <div class="col-sm-3">
-            <div class="ibox float-e-margins">
-                <div class="ibox-content">
-                    <div class="file-manager">
-                        <button type="button" class="layui-btn" id="test1">
-                            <i class="fa fa-cloud"></i>上传文件
-                        </button>
-                        <div class="hr-line-dashed"></div>
-                        <ul class="folder-list" style="padding: 0">
-                            <li><a href="javascript:void(0)" class="file-control hactive" :class="{'aactive':type === ''}"
-                                   v-on:click="changeType('')"><i class="fa fa-folder"></i>所有文件</a></li>
-
-                            <li><a href="javascript:void(0)" class="file-control hactive" :class="{'aactive':type === 0}"
-                                   v-on:click="changeType(0)"><i class="fa fa-folder"></i>图片</a></li>
-
-                            <li><a href="javascript:void(0)" :class="{'aactive':type === 1}"
-                                   v-on:click="changeType(1)" class="file-control hactive"><i class="fa fa-folder"></i>文档</a>
-                            </li>
-
-                            <li><a href="javascript:void(0)" v-on:click="changeType(2)" :class="{'aactive':type === 2}"
-                                   class="file-control hactive"><i class="fa fa-folder"></i>视频</a></li>
-
-                            <li><a href="javascript:void(0)" v-on:click="changeType(3)" :class="{'aactive':type === 3}"
-                                   class="file-control hactive"><i class="fa fa-folder"></i>音乐</a></li>
-
-                            <li><a href="javascript:void(0)" v-on:click="changeType(99)" :class="{'aactive':type === 99}"
-                                   class="file-control hactive"><i class="fa fa-folder"></i>其他</a></li>
-                        </ul>
-                    </div>
+<div class="wrapper wrapper-content ">
+    <div class="col-sm-4">
+        <div class="container">
+            <hr/>
+            <button type="button" class="btn btn-primary btn-lg" data-toggle="modal" data-target="#myModal">
+                上传文件
+            </button>
+            <hr/>
+            <button type="button" class="btn btn-primary btn-lg" data-toggle="modal" data-target="#myModal2" data-whatever="@jason" onclick="Load()">
+                显示文件
+            </button>
+        </div>
+    </div>
+    <div class="modal fade" id="myModal" role="dialog" aria-label="myModalLabel" aria-hidden="true">
+        <div class="modal-dialog">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                        <span aria-hidden="true">×</span>
+                    </button>
+                    <h3 class="modal-title">上传文件</h3>
+                </div>
+                <div class="modal-body">
+                    <form action="/common/file/import" method="POST" enctype="multipart/form-data">
+                        文件：<input type="file" name="file"/>
+                        <input type="submit"/>
+                    </form>
+                </div>
+                <div class="modal-footer">
+                   <!-- <button type="submit" class="btn btn-primary" data-dismiss="modal">上传</button>-->
+                    <button type="button" class="btn btn-default" data-dismiss="modal">关闭</button>
                 </div>
             </div>
         </div>
-        <div class="col-sm-9 animated fadeInRight">
-            <div class="row">
-                <div class="col-sm-12">
-                    <div class="file-box" v-for="row in rows">
-                        <div class="file">
-                            <a href="#">
-                                <span class="corner"></span>
-                                <div class="image">
-                                    <img alt="image" class="img-responsive" :src="row.url">
-                                </div>
-                                <div class="file-name">
-                                    <br/>
-                                    <small>{{row.createDate}}</small>
-                                </div>
-                                &nbsp; &nbsp; &nbsp; &nbsp;&nbsp; &nbsp; &nbsp; &nbsp;<button
-                                    class="btn btn-warning btn-xs copy" :url="row.url">复制
-                            </button>&nbsp; &nbsp; &nbsp; &nbsp;<button class="btn btn-danger btn-xs"
-                                                                        @click="remove(row.id)">删除
-                            </button>
-                            </a>
-                        </div>
+    </div>
+    <!--右边-->
+    <div class="col-sm-8">
+        <div class="ibox">
+            <div class="ibox-body">
+                <div class="fixed-table-toolbar">
+                    <div class="columns pull-left">
+                        <button shiro :hasPermission="common:dict:add" type="button"
+                                class="btn  btn-primary" onclick="add()">
+                            <i class="fa fa-plus" aria-hidden="true"></i>添加
+                        </button>
+                        <button shiro :hasPermission="common:dict:batchRemove"
+                                type="button" class="btn  btn-danger" onclick="batchRemove()">
+                            <i class="fa fa-trash" aria-hidden="true"></i>删除
+                        </button>
                     </div>
-                    <div id="incomeNum"></div>
+                    <div class="columns pull-right">
+                        <button class="btn btn-success" onclick="reLoad()">查询</button>
+                    </div>
+                    <div class="columns pull-right col-md-2 nopadding">
+                        <select data-placeholder="选择类别" class="form-control chosen-select"
+                                tabindex="2" style="width: 100%">
+                            <option value="">选择类别</option>
+                        </select>
+                    </div>
                 </div>
-            </div>
-            <div>
-                <ul id="page"></ul>
+                <table id="excelTable" data-mobile-responsive="true"></table>
             </div>
         </div>
     </div>
 </div>
+<!--shiro控制bootstraptable行内按钮看见性 来自bootdo的创新方案 -->
+<div>
+    <script type="text/javascript">
+        var s_edit_h = 'hidden';
+        var s_remove_h = 'hidden';
+        var s_resetPwd_h = 'hidden';
+    </script>
+</div>
+<div shiro :hasPermission="common:dict:edit">
+    <script type="text/javascript">
+        s_edit_h = '';
+    </script>
+</div>
+<div shiro :hasPermission="common:dict:remove">
+    <script type="text/javascript">
+        var s_remove_h = '';
+    </script>
+</div>
+<div shiro :hasPermission="common:dict:add">
+    <script type="text/javascript">
+        var s_add_h = '';
+    </script>
+</div>
+<!--</div>-->
+<div th:include="include :: footer"></div>
+<script type="text/javascript"
+        src="/js/appjs/common/file/file.js">
 
-<!-- 全局js -->
-<script src="/js/jquery.min.js?v=2.1.4"></script>
-<script src="/js/bootstrap.min.js?v=3.3.6"></script>
-<script src="/js/bootstrap-paginator.min.js"></script>
-
-<script src="/js/content.js?v=1.0.0"></script>
-<script src="/js/layui.js"></script>
-<script src="/js/plugins/clipboard/clipboard.min.js"></script>
-<script src="/js/plugins/layer/layer.min.js"></script>
-<script src="/js/vue.min.js"></script>
-
-<script>
-    var app = new Vue({
-        el: '#app',
-        data: {
-            limit: 12,
-            offset: 0,
-            total: 0,
-            file: '',
-            type: '',
-            rows: '',
-        },
-        methods: {
-            getData: function () {
-                $.getJSON("/common/sysFile/list", {
-                    limit: this.limit,
-                    offset: this.offset,
-                    type: this.type
-                }, function (r) {
-                    app.total = r.total;
-                    app.rows = r.rows;
-                    app.page();
-                });
-            },
-            page: function () {
-                var options = {
-                    currentPage: app.offset / 12 + 1, //当前页
-                    totalPages: Math.ceil(app.total / 12), //总页数
-                    numberofPages: 4, //显示的页数
-                    bootstrapMajorVersion: 3,
-                    alignment: 'center',
-                    size: 'large',
-                    shouldShowPage: true,
-                    itemTexts: function (type, page, current) { //修改显示文字
-                        switch (type) {
-                            case "first":
-                                return "首页";
-                            case "prev":
-                                return "上一页";
-                            case "next":
-                                return "下一页";
-                            case "last":
-                                return "尾页";
-                            case "page":
-                                return page;
-                        }
-                    },
-                    onPageClicked: function (event, originalEvent, type, page) {
-                        app.offset = (page - 1) * 12;
-                        app.getData();
-                    }
-                };
-                $('#page').bootstrapPaginator(options);
-            },
-            remove: function (id) {
-                layer.confirm('确定要删除选中的记录？', {
-                    btn: ['确定', '取消']
-                }, function () {
-                    $.ajax({
-                        url: "/common/sysFile/remove",
-                        type: "post",
-                        data: {
-                            'id': id
-                        },
-                        success: function (r) {
-                            if (r.code == 0) {
-                                layer.msg(r.msg);
-                                app.getData();
-                            } else {
-                                layer.msg(r.msg);
-                                app.getData();
-                            }
-                        }
-                    });
-                })
-            },
-            changeType: function (i) {
-                this.type = i;
-                this.offset = 0;
-                this.getData();
-            }
-        },
-        created: function () {
-            this.changeType('')
-        }
-    });
-</script>
-<script type="text/javascript">
-    var clipboard = new Clipboard('button.copy', {
-        text: function (trigger) {
-            layer.msg('文件路径已复制到粘贴板');
-            return $(trigger).attr('url');
-        }
-    });
-    layui.use('upload', function () {
-        var upload = layui.upload;
-        //执行实例
-        var uploadInst = upload.render({
-            elem: '#test1', //绑定元素
-            url: '/common/sysFile/upload', //上传接口
-            size: 1000,
-            accept: 'file',
-            done: function (r) {
-                layer.msg(r.msg);
-                app.getData();
-            },
-            error: function (r) {
-                layer.msg(r.msg);
-            }
-        });
-    });
-
-    // function changeType(i) {
-    //     app.type = i;
-    //     app.offset = 0;
-    //     app.getData();
-    // }
 </script>
 </body>
 </html>
