--- a/src/main/resources/templates/index_v1.html
+++ b/src/main/resources/templates/index_v1.html
@@ -59,23 +59,31 @@
                         <div class="logo-element">BootDo</div>
                     </div>
                 </li>
-                <li><a href="#"> <i class="fa fa-home"></i> <span
-                        class="nav-label">主页</span> <span class="fa arrow"></span>
-                </a>
+                <li><a href="#">
+                        <i class="fa fa-home"></i>
+                        <span  class="nav-label">主页</span>
+                        <span class="fa arrow"></span>
+                    </a>
                     <ul class="nav nav-second-level">
-                        <li><a id="index001" class="J_menuItem" href="index_v1.html"
-                               data-index="0" th:href="@{/main}">了解Software Reliability</a></li>
+                        <li>
+                            <a id="index001" class="J_menuItem" href="index_v1.html"
+                               data-index="0" th:href="@{/main}">了解Software Reliability</a>
+                        </li>
                     </ul>
                 </li>
-                <li th:each="menu : ${menus}"><a href="#"> <i
-                        class="fa fa fa-bar-chart-o" th:class="${menu.attributes.icon}"></i>
-                    <span class="nav-label" th:text="${menu.text}">基础信息</span> <span
-                            class="fa arrow"></span>
-                </a>
+                <li th:each="menu : ${menus}">
+                    <a href="#">
+                        <i class="fa fa fa-bar-chart-o" th:class="${menu.attributes.icon}"></i>
+                        <span class="nav-label" th:text="${menu.text}">基础信息</span>
+                        <span class="fa arrow"></span>
+                    </a>
                     <ul class="nav nav-second-level">
-                        <li th:each="cmenu : ${menu.children}"><a class="J_menuItem" href="graph_echarts.html"
+                        <li th:each="cmenu : ${menu.children}">
+                            <a class="J_menuItem" href="graph_echarts.html"
                                                                   th:text="${cmenu.text}"
-                                                                  th:href="${cmenu.attributes.url}">系统管理</a></li>
+                                                                  th:href="${cmenu.attributes.url}">系统管理
+                            </a>
+                        </li>
                     </ul>
                 </li>
             </ul>
